FTF & FETF page naming

--- a/app/views/fetf/_includes/body-content_claim-detail-main-block.html
+++ b/app/views/fetf/_includes/body-content_claim-detail-main-block.html
@@ -1,8 +1,8 @@
-<p class="govuk-body">Check and confirm the details of your claim.</p>
+<p class="govuk-body">Check and confirm the items you’re claiming for.</p>
 
 
 <div class="govuk-inset-text">
-  Submit your claim by 11:59pm on <strong>30 December 2024</strong>.
+  Submit your claim by 11:59pm on <strong>29 November 2024</strong>.
 </div>
 
 
@@ -10,9 +10,9 @@
 <h1 class="govuk-heading-l">Approved grant funding</h1>
 
 <span class="content-section">
-  <p class="govuk-body">This table is pre-populated and gives details of your approved grant funding.</p>
+  <p class="govuk-body">This table is pre-populated from your grant funding agreement.</p>
 
-<p class="govuk-body">You have been awarded a grant of <strong>£20,000.00</strong> for the items:</p>
+<p class="govuk-body">You were awarded a grant of <strong>£20,000.00</strong> for the items:</p>
 
 <!-- TABLE CONTENT -->
 <table class="govuk-table">
