--- a/app/views/fetf/claim/v1-0/confirmation.html
+++ b/app/views/fetf/claim/v1-0/confirmation.html
@@ -26,7 +26,7 @@
         
         <div class="govuk-panel govuk-panel--confirmation">
             <h1 class="govuk-panel__title">
-              First claim submitted
+              Claim submitted
             </h1>
           <div class="govuk-panel__body">
             Your reference number<br><strong>HDJ2123F</strong>
