--- a/app/views/fetf/claim/v1-0/harvest2.html
+++ b/app/views/fetf/claim/v1-0/harvest2.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main-claim-round-2.html" %}
 
 {% block pageTitle %}
-  Task list – {{ serviceName }} – GOV.UK Prototype Kit
+Upload3
 {% endblock %}
 
 {% block content %}
@@ -62,7 +62,7 @@
         Harvesting head (FETF13)
       </h1>
 
-      <p class="govuk-body">Upload evidence to support your claim for this item.</p>
+      <p class="govuk-body">Upload evidence to show the item is paid in full and in place.</p>
 
 
 
@@ -92,7 +92,7 @@ function showVisualEvidenceSection() {
 <div class="govuk-grid-column-two-thirds">
 
   <p class="govuk-label govuk-label--m">Financial evidence</p>
-  <p class="govuk-body">For example, invoices, receipts, and bank statements (you can cross out other transactions)</p>
+  <p class="govuk-body">For example, invoices, receipts and bank statements (you can cross out other transactions)</p>
   <p class="govuk-body" style="color: #505A5F;">Supported file types are PDF, DOC, DOCX, XLS, XLSX or JPG. Maximum file size is 20MB.</p><br>
 
 
