--- a/app/views/fetf/claim/v1-0/submit.html
+++ b/app/views/fetf/claim/v1-0/submit.html
@@ -33,14 +33,13 @@
 
     <h2 class="govuk-heading-m">Declaration</h2>
 
-    <h2 class="govuk-body">By submitting this claim form, you are signing up to the declaration and undertakings set out below.</h2>
 
     <p class="govuk-body">I declare that:<br>
       <ul class="govuk-list govuk-list--bullet">
-        <li>I have complied with and will continue to comply with my Grant Funding Agreement.</li>
-        <li>I have checked the information in this form is correct and I accept full responsibility for it.</li>
-        <li>I understand that under the terms of my Grant Funding Agreement, payment may be withheld and/or recovered if I have breached my Grant Funding Agreement.</li>
-        <li>I am submitting invoices, records, accounts and other required evidence (for example photographs) relevant to this claim, and will keep copies of that evidence in accordance with my Grant Funding Agreement.</li>
+        <li>I have complied with and will continue to comply with my grant funding agreement.</li>
+        <li>I have checked the information is correct and I accept full responsibility for it.</li>
+        <li>I understand that under the terms of my grant funding agreement, payment may be withheld and/or recovered if I have breached my grant funding agreement.</li>
+        <li>I am submitting invoices, records, accounts and other required evidence (for example photographs) relevant to this claim, and will keep copies of that evidence in accordance with my grant funding agreement.</li>
       </ul>
       <br>
 
@@ -49,8 +48,7 @@
         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
         <strong class="govuk-warning-text__text">
           <span class="govuk-warning-text__assistive"></span>
-          If you knowingly or recklessly make a false statement to obtain payments to yourself or others, you risk prosecution, termination of any resulting agreement, and recovery of any monies paid to you under the scheme. You may be excluded from this scheme and from other financial assistance under the Agriculture Act 2020 for up to two years.
-        </strong>
+          You may face legal action, your agreement terminated and repayment of funding if you provide false information. You could also be barred from the Agriculture Act 2020 scheme and other financial aid.</strong>
       </div>
 
 
