--- a/app/views/fetf/claim/v1-0/upload.html
+++ b/app/views/fetf/claim/v1-0/upload.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main-claim-round-2.html" %}
 
 {% block pageTitle %}
-  Task list – {{ serviceName }} – GOV.UK Prototype Kit
+  Upload evidence
 {% endblock %}
 
 {% block content %}
@@ -31,16 +31,17 @@
       <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">
         Upload claim evidence
       </h1>
+ 
+       <p class="govuk-body">Add evidence for each item.</p>
+
 
       <div class="govuk-inset-text">
         The RPA aims to pay complete claims within 30 days.
       </div>
 
-      <h2 class="govuk-heading-l" style="margin-bottom: 20px;">
-        Claim evidence
-      </h2>
+ 
 
-      <p class="govuk-body">Add supporting evidence for the items you wish to claim.</p>
+     
 
       <br>
 
