--- a/app/views/ftf/claim/v3-0/submit.html
+++ b/app/views/ftf/claim/v3-0/submit.html
@@ -37,10 +37,10 @@
 
     <p class="govuk-body">I declare that:<br>
       <ul class="govuk-list govuk-list--bullet">
-        <li>I have complied with and will continue to comply with my Grant Funding Agreement.</li>
+        <li>I have complied with and will continue to comply with my grant funding agreement.</li>
         <li>I have checked the information in this form is correct and I accept full responsibility for it.</li>
-        <li>I understand that under the terms of my Grant Funding Agreement, payment may be withheld and/or recovered if I have breached my Grant Funding Agreement.</li>
-        <li>I am submitting invoices, records, accounts and other required evidence (for example photographs) relevant to this claim, and will keep copies of that evidence in accordance with my Grant Funding Agreement.</li>
+        <li>I understand that under the terms of my grant funding agreement, payment may be withheld and/or recovered if I have breached my grant funding agreement.</li>
+        <li>I am submitting invoices, records, accounts and other required evidence (for example photographs) relevant to this claim, and will keep copies of that evidence in accordance with my grant funding agreement.</li>
       </ul>
       <br>
 
