--- a/app/views/ftf/eoi/v2-0/score-completed.html
+++ b/app/views/ftf/eoi/v2-0/score-completed.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main-application-round-2.html" %}
 
-{% set pageName="Download claim form" %}
+{% set pageName="Score completed" %}
 
 {% block content %}
 
