--- a/app/views/fetf/_includes/details-block_claim-questions-contact.html
+++ b/app/views/fetf/_includes/details-block_claim-questions-contact.html
@@ -5,7 +5,7 @@
       </span>
     </summary>
     <div class="govuk-details__text">
-      <p class="govuk-body">If you have any questions about your claim, call the RPA and follow the options for the Farming Transformation Fund scheme.</p>
+      <p class="govuk-body">If you have any questions about your claim, call the RPA and follow the options for the Farming Equipment and Technology Fund scheme.</p>
       <p class="govuk-body"><strong>Telephone</strong><br>Telephone: 03000 200 301<br>Monday to Friday, 8:30am to 5pm (except public holidays)<br>
         <a href="/_common/not-testing.html">Find out about call charges (opens in a new tab)</a>
         </p>
