--- a/app/views/fetf/agreement/v1-2/agreement-detail.html
+++ b/app/views/fetf/agreement/v1-2/agreement-detail.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main-agreement-round-2.html" %}
 
 {% block pageTitle %}
-Accept grant funding agreement
+Agreement details
 {% endblock %}
 
 {% block content %}
