--- a/app/views/fetf/agreement/v1-2/review-terms-and-conditions.html
+++ b/app/views/fetf/agreement/v1-2/review-terms-and-conditions.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main-agreement-round-2.html" %}
 
 {% block pageTitle %}
-Accept grant funding agreement
+Review terms and conditions
 {% endblock %}
 
 {% block content %}
