--- a/app/views/fetf/claim/v1-0/claim-detail.html
+++ b/app/views/fetf/claim/v1-0/claim-detail.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main-claim-round-2.html" %}
 
 {% block pageTitle %}
-Accept grant funding agreement
+Check claim details
 {% endblock %}
 
 {% block content %}
