--- a/app/views/fetf/claim/v1-0/index.html
+++ b/app/views/fetf/claim/v1-0/index.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main-agreement-round-2.html" %}
 
 {% block pageTitle %}
-Water Management Grant - Round 3
+Start your claim
 {% endblock %}
 
 
