--- a/app/views/fetf/claim/v1-0/shoe.html
+++ b/app/views/fetf/claim/v1-0/shoe.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main-claim-round-2.html" %}
 
 {% block pageTitle %}
-  Task list – {{ serviceName }} – GOV.UK Prototype Kit
+Upload5
 {% endblock %}
 
 {% block content %}
@@ -32,7 +32,6 @@
         Trailing shoe slurry system over 8m (FETF37)
       </h1>
 
-      <p class="govuk-body">Add details of the item you want to claim.</p>
 
   
 
