--- a/app/views/fetf/claim/v1-0/summary.html
+++ b/app/views/fetf/claim/v1-0/summary.html
@@ -26,10 +26,12 @@
 
     <span class="govuk-caption-xl">Claim for a FETF Grant</span>
     <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">Check your claim evidence</h1>
-    {% if (data['progress'] == "submitted") %}<span class="govuk-body">Evidence submitted as part of your claim.</span>{% else %}
-    <span class="govuk-body">Review you have uploaded your claim evidence.</span>{% endif %}
+    {% if (data['progress'] == "submitted") %}
+    <span class="govuk-body">Evidence submitted as part of your claim.</span><br>
+    {% else %}
+    {% endif %}
 
-<br><br><br>
+<br><br>
 
 
 
