--- a/app/views/ftf/agreement/v2-0/agreement-detail.html
+++ b/app/views/ftf/agreement/v2-0/agreement-detail.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main-agreement-round-2.html" %}
 
 {% block pageTitle %}
-Accept grant funding agreement
+Agreement details
 {% endblock %}
 
 {% block content %}
