--- a/app/views/ftf/agreement/v2-0/review-terms-and-conditions.html
+++ b/app/views/ftf/agreement/v2-0/review-terms-and-conditions.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main-agreement-round-2.html" %}
 
 {% block pageTitle %}
-Accept grant funding agreement
+Review terms and conditions
 {% endblock %}
 
 {% block content %}
