--- a/app/views/ftf/application/v3-0/linked/list.html
+++ b/app/views/ftf/application/v3-0/linked/list.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main-application-round-2.html" %}
 
 {% block pageTitle %}
-  Task list – {{ serviceName }} – GOV.UK Prototype Kit
+  Items list
 {% endblock %}
 
 {% block content %}
