--- a/app/views/ftf/eoi/v2-0/check.html
+++ b/app/views/ftf/eoi/v2-0/check.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main-application-round-2.html" %}
 
-{% set pageName="Check your claim" %}
+{% set pageName="Check your answers" %}
 
 {% block content %}
 
