--- a/app/views/ftf/eoi/v2-0/outcome-accepted.html
+++ b/app/views/ftf/eoi/v2-0/outcome-accepted.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main-agreement-round-2.html" %}
 
 {% block pageTitle %}
-Accept grant funding agreement
+Outcome accepted
 {% endblock %}
 
 {% block content %}
