FTF content adjustments

--- a/app/views/ftf/agreement/v2-0/email-agreement-accepted.html
+++ b/app/views/ftf/agreement/v2-0/email-agreement-accepted.html
@@ -147,7 +147,7 @@
               You have accepted your grant funding agreement and so now can start your project.<br><br>
 
 
-              You should read <a href="/_common/not-testing.html">Managing a successful Farming Transformation Fund project</a> on Welcome to GOV.UK.<br>
+              You should read <a href="/_common/not-testing.html">Managing a successful Farming Transformation Fund project</a> on Welcome to GOV.UK.<br><br>
               It explains the steps you must follow to comply with the funding rules for your grant.<br><br>
 
               Download copies of your agreement documents:<br>
