--- a/app/views/ftf/eoi/v2-0/confirmation.html
+++ b/app/views/ftf/eoi/v2-0/confirmation.html
@@ -54,7 +54,7 @@
        <h2 class="govuk-heading-m">What happens next</h2>
 
        <p class="govuk-body"> 
-        The RPA will be in touch by <strong>24 February 2024</strong>.<br>
+        The RPA will be in touch by <strong>24 February 2024</strong>.<br><br>
         They will tell you if your project scored well enough to get the full application form.<br><br>
         If you submit an application, RPA will assess it against other projects and value for money. You will not automatically get a grant. The grant is expected to be highly competitive and you are competing against other projects.<br><br>
         If your application is successful, you’ll be sent a funding agreement and can begin work on the project.
