--- a/app/views/ftf/claim/v3-0/email-claim-submitted3.html
+++ b/app/views/ftf/claim/v3-0/email-claim-submitted3.html
@@ -159,7 +159,7 @@
        
             <div class="govuk-details__text">
               <strong>If you have questions about your claim</strong><br><br>
-              If you have any questions about your claim or you cannot make the claim date, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
+              If you have any questions about your claim, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
 
 
               <p class="govuk-body">
