FTF application - corrections

--- a/app/views/ftf/application/v3-0/plans/plans1.html
+++ b/app/views/ftf/application/v3-0/plans/plans1.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main-application-round-2.html" %}
 
-{% set pageName=""Upload8" %}
+{% set pageName="Upload8" %}
 
 {% block content %}
 
