--- a/app/views/ftf/application/v3-0/vat/vat2.html
+++ b/app/views/ftf/application/v3-0/vat/vat2.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main-application-round-2.html" %}
 
-{% set pageName=""Upload7" %}
+{% set pageName="Upload7" %}
 
 {% block content %}
 
