--- a/app/views/ftf/application/v3-0/outcome-unsuccessful.html
+++ b/app/views/ftf/application/v3-0/outcome-unsuccessful.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main-agreement-round-2.html" %}
 
 {% block pageTitle %}
-Application outcome successful
+Application outcome unsuccessful
 {% endblock %}
 
 {% block content %}
