FETF Application amends

--- a/app/views/fetf/_includes/activity-list_status-block.html
+++ b/app/views/fetf/_includes/activity-list_status-block.html
@@ -3,7 +3,7 @@
 
 <h3 class="govuk-heading-m">You can start your application</h3>
 <div class="govuk-inset-text">
-    Round 1 closes at 11.59pm on <strong>7 July 2024</strong>.
+    Application deadline is 11.59pm on <strong>7 July 2024</strong>.
 </div>
 
 
@@ -12,7 +12,7 @@
 
 <h3 class="govuk-heading-m">Application in progess</h3>
 <div class="govuk-inset-text">
-    Round 1 closes at 11.59pm on <strong>7 July 2024</strong>.
+    Application deadline is 11.59pm on <strong>7 July 2024</strong>.
 </div>
 
 
@@ -21,14 +21,14 @@
 
 <h3 class="govuk-heading-m">Application under review</h3>
 <div class="govuk-inset-text">
-    RPA should complete the review by <strong>28 February 2024</strong>.
+    RPA will tell you the outcome by <strong>4 August 2024</strong>.
 </div>
 
 
 {% elif (data['fetf-status'] == "01d") %}
 <!-- Application under review -->
 
-<h3 class="govuk-heading-m">Application unsuccessful</h3>
+<h3 class="govuk-heading-m">Application outcome: unsuccessful</h3>
 <!-- <p class="govuk-body">Your <a href="">application outcome</a> explains why your project was not successful.</p> -->
 
 
@@ -37,7 +37,7 @@
 
 <h3 class="govuk-heading-m">Read and sign your grant funding agreement</h3>
 <div class="govuk-inset-text">
-    Your agreement offer will expire at 11:59pm on <strong>31 March 2024</strong>.
+    Your agreement offer will expire at 11:59pm on <strong>13 September 2024</strong>.
 </div>
 
 
@@ -46,7 +46,7 @@
 
 <h3 class="govuk-heading-m">You can submit your claim</h3>
 <div class="govuk-inset-text">
-    Your claim is due by 11:59pm on <strong>31 June 2024</strong>.
+    Your claim is due by 11:59pm on <strong>29 November 2024</strong>.
 </div>
 
 {% elif (data['fetf-status'] == "04") %}
@@ -54,7 +54,7 @@
 
 <h3 class="govuk-heading-m">Claim under review</h3>
 <div class="govuk-inset-text">
-    RPA should complete the review by <strong>30 July 2024</strong>.
+    RPA should complete the review by <strong>31 December 2024</strong>.
 </div>
 
 {% endif %}
