--- a/app/views/fetf/_includes/activity-list_task-section_agreement.html
+++ b/app/views/fetf/_includes/activity-list_task-section_agreement.html
@@ -26,7 +26,7 @@
 
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <div>Sign and accept agreement</div>
+          <div>Accept agreement</div>
         </div>
         <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
           Cannot start yet
@@ -64,7 +64,7 @@
 
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <div>Sign and accept agreement</div>
+          <div>Accept agreement</div>
         </div>
         <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
           Cannot start yet
@@ -100,7 +100,7 @@
 
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <div>Sign and accept agreement</div>
+          <div>Accept agreement</div>
         </div>
         <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
           Cannot start yet
@@ -136,7 +136,7 @@
 
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <div>Sign and accept agreement</div>
+          <div>Accept agreement</div>
         </div>
         <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
           Cannot start yet
@@ -170,7 +170,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Sign and accept agreement</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Accept agreement</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-1-status">
           <strong class="govuk-tag govuk-tag--blue">
@@ -206,7 +206,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Sign and accept agreement</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Accept agreement</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-1-status">
             Completed
