--- a/app/views/fetf/_includes/filters/filters-panel.html
+++ b/app/views/fetf/_includes/filters/filters-panel.html
@@ -9,7 +9,7 @@
         id: 'keywords',
         name: 'keywords',
         label: {
-          text: 'Keywords',
+          text: 'Search for items',
           classes: 'govuk-label--s'
         }
       }) }}
