--- a/app/views/fetf/application/v1-0/selected-items.html
+++ b/app/views/fetf/application/v1-0/selected-items.html
@@ -49,7 +49,7 @@
     </tr>
     <tr class="govuk-table__row">
       <td colspan="2"></td>
-      <td colspan="3" style="padding: 20px 0; border-bottom: solid 1px #b1b4b6;">Grant total</td>
+      <td colspan="3" style="padding: 20px 0; border-bottom: solid 1px #b1b4b6;">Requested grant total</td>
       <td style="text-align: right; border-bottom: solid 1px #b1b4b6;"><span class="govuk-body-l" style="font-weight: bold;">£1,450.00</span></td>
     </tr>
     <tr class="govuk-table__row">
