--- a/app/views/fetf/application/v1-0/submit-application/confirmation.html
+++ b/app/views/fetf/application/v1-0/submit-application/confirmation.html
@@ -68,28 +68,6 @@
      
 
 
-
-        <div class="govuk-warning-text">
-          <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-          <strong class="govuk-warning-text__text">
-            <span class="govuk-warning-text__assistive"></span>
-            You must not start the project
-          </strong>
-        </div>
-  
-
-
-        <p class="govuk-body">Starting the project or committing to any costs (such as placing orders) before you receive a funding agreement will invalidate your application.<br>
-
-
-          <p class="govuk-body">Before you start the project, you can:<br>
-            <ul class="govuk-list govuk-list--bullet">
-              <li>get quotes from suppliers</li>
-              <li>apply for planning permission or an abstraction licence</li>
-             </ul>
-          </p>
-
-
           <h2 class="govuk-heading-m">Withdrawing your application</h2>
 
 
@@ -103,7 +81,7 @@
 
 
 
-        {% include "../../_includes/details-block_application-questions-contact.html" %}
+        {% include "../../../_includes/details-block_application-questions-contact.html" %}
 
        <br><br>
 
